# SARVOS

./: .gitignore  README.md  WIRING_INSTRUCTIONS.md  agent_state.json  config.json  desktop.py  diagnose_volume.py  final_targeted_patch.py  main.py  pyproject.toml  requirements-voice.txt  requirements.txt  start_sarvos.bat
agents/: autodeveloper.py  autodeveloper_agent.py  autodeveloper_config.py  autodeveloper_intent.py  autodeveloper_tools.py  autodeveloper_wrapper.py  automation.py  automation_config.py  automation_intent.py  base.py  browser.py  browser_config.py  browser_intent.py  coding.py  computer_control.py  computer_control_config.py  computer_control_intent.py  document.py  document_config.py  document_intent.py  general.py  import_agent.py  import_intent.py  interactive_browser.py  interactive_browser_intent.py  job.py  job_config.py  job_intent.py  memory_agent.py  planner.py  research.py  research_config.py  research_intent.py  system_info.py  system_info_intent.py  terminal.py  terminal_intent.py  window_manager.py  window_manager_intent.py
api/: server.py
autodeveloper_workspace/: test_calc.py
core/: factory.py  orchestrator.py  schemas.py
llm/: client.py  config.py
memory/: engine.py  store.py
static/: index.html
tests/: test_agents.py  test_api.py  test_audio_io.py  test_autodeveloper_agent.py  test_autodeveloper_intent.py  test_automation_agent.py  test_automation_e2e.py  test_automation_intent.py  test_browser_agent.py  test_browser_intent.py  test_computer_control_agent.py  test_computer_control_intent.py  test_continuous_mic_monitor.py  (+30 more)
(+11 files in other folders)
