[project]
name = "sarvos"
version = "0.1.0"
description = "SARVOS -- Personal AI Operating System (Phase 1a foundation)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "scikit-learn>=1.3",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
